<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddFragments.AddPersonFragment">

    <LinearLayout
        android:layout_above="@+id/control_buttons_add_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_add_person_item"
                android:paddingRight="@dimen/padding_add_person_item"
                app:mtf_labelColor="@color/secondaryTextColor"
                app:mtf_image="@drawable/ic_person_black_24dp"
                app:mtf_backgroundColor="@color/secondaryLightColor"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_add_edit_text"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_add_person_item"
                android:paddingRight="@dimen/padding_add_person_item"
                app:mtf_labelColor="@color/secondaryTextColor"
                app:mtf_image="@drawable/ic_person_black_24dp"
                app:mtf_backgroundColor="@color/secondaryLightColor"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/surname_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname_hint"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_add_edit_text"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </com.github.florent37.materialtextfield.MaterialTextField>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_add_person_item"
                android:paddingRight="@dimen/padding_add_person_item"
                app:mtf_labelColor="@color/secondaryTextColor"
                app:mtf_image="@drawable/ic_phone_black_24dp"
                app:mtf_backgroundColor="@color/secondaryLightColor"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/phone_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_add_edit_text"
                    android:inputType="number"
                    android:imeOptions="actionDone"/>
            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_add_person_item"
                android:paddingRight="@dimen/padding_add_person_item"
                app:mtf_labelColor="@color/secondaryTextColor"
                app:mtf_image="@drawable/ic_mail_black_24dp"
                app:mtf_backgroundColor="@color/secondaryLightColor"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_add_edit_text"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"/>
            </com.github.florent37.materialtextfield.MaterialTextField>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_add_person_item"
                android:paddingRight="@dimen/padding_add_person_item"
                app:mtf_labelColor="@color/secondaryTextColor"
                app:mtf_image="@drawable/ic_location_black_24dp"
                app:mtf_backgroundColor="@color/secondaryLightColor"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_hint"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_add_edit_text"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionDone"/>
            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_add_person_item"
                android:paddingRight="@dimen/padding_add_person_item"
                app:mtf_labelColor="@color/secondaryTextColor"
                app:mtf_image="@drawable/ic_note_black_24dp"
                app:mtf_backgroundColor="@color/secondaryLightColor"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/note_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note_hint"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_add_edit_text"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </com.github.florent37.materialtextfield.MaterialTextField>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/rent_from_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent_from_hint"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/rent_till_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent_till_hint"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="2">

            <Button
                android:id="@+id/rent_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rent_devices_hint"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"/>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_add_person_item"
                android:paddingRight="@dimen/padding_add_person_item"
                app:mtf_labelColor="@color/secondaryTextColor"
                app:mtf_image="@drawable/ic_money_black_24dp"
                app:mtf_backgroundColor="@color/secondaryLightColor"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/total_coast_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_price_hint"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/text_size_add_edit_text"
                    android:inputType="textPostalAddress"
                    android:imeOptions="actionDone"/>
            </com.github.florent37.materialtextfield.MaterialTextField>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_buttons_add_device"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25dp"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape_cancel"
            android:text="@string/bt_cancel_text"
            android:layout_marginLeft="@dimen/bt_add_margin"
            android:layout_marginRight="@dimen/bt_add_margin"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape_add"
            android:text="@string/bt_add_text"
            android:layout_marginLeft="@dimen/bt_add_margin"
            android:layout_marginRight="@dimen/bt_add_margin"/>

    </LinearLayout>



</RelativeLayout>