<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddFragments.AddDeviceFragment">

    <LinearLayout
        android:layout_above="@+id/control_buttons_add_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:weightSum="5">

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_add_item"
            android:paddingRight="@dimen/padding_add_item"
            app:mtf_labelColor="@color/secondaryTextColor"
            app:mtf_image="@drawable/ic_title_black_24dp"
            app:mtf_backgroundColor="@color/secondaryLightColor"
            android:layout_weight="1">

            <EditText
                android:id="@+id/device_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size_add_edit_text"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_add_item"
            android:paddingRight="@dimen/padding_add_item"
            app:mtf_labelColor="@color/secondaryTextColor"
            app:mtf_image="@drawable/ic_description_black_24dp"
            app:mtf_backgroundColor="@color/secondaryLightColor"
            android:layout_weight="1">

            <EditText
                android:id="@+id/device_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_hint"
                android:textColor="@color/primaryTextColor"
                android:maxLength="250"
                android:maxLines="4"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="@dimen/text_size_add_edit_text" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_add_item"
            android:paddingRight="@dimen/padding_add_item"
            app:mtf_labelColor="@color/secondaryTextColor"
            app:mtf_image="@drawable/ic_money_black_24dp"
            app:mtf_backgroundColor="@color/secondaryLightColor"
            android:layout_weight="1">

            <EditText
                android:id="@+id/device_price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_hint"
                android:textColor="@color/primaryTextColor"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:textSize="@dimen/text_size_add_edit_text" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_add_item"
            android:paddingRight="@dimen/padding_add_item"
            app:mtf_labelColor="@color/secondaryTextColor"
            app:mtf_image="@drawable/ic_amount_black_24dp"
            app:mtf_backgroundColor="@color/secondaryLightColor"
            android:layout_weight="1">

            <EditText
                android:id="@+id/device_amount_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_hint"
                android:textColor="@color/primaryTextColor"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:textSize="@dimen/text_size_add_edit_text" />

        </com.github.florent37.materialtextfield.MaterialTextField>

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_add_item"
            android:paddingRight="@dimen/padding_add_item"
            app:mtf_labelColor="@color/secondaryTextColor"
            app:mtf_image="@drawable/ic_photo_black_24dp"
            app:mtf_backgroundColor="@color/secondaryLightColor"
            android:layout_weight="1">

            <EditText
                android:id="@+id/device_photo_url_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/photo_url_hint"
                android:textColor="@color/primaryTextColor"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:textSize="@dimen/text_size_add_edit_text" />

        </com.github.florent37.materialtextfield.MaterialTextField>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_buttons_add_device"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="25dp"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape_cancel"
            android:text="@string/bt_cancel_text"
            android:layout_marginLeft="@dimen/bt_add_margin"
            android:layout_marginRight="@dimen/bt_add_margin"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_shape_add"
            android:text="@string/bt_add_text"
            android:layout_marginLeft="@dimen/bt_add_margin"
            android:layout_marginRight="@dimen/bt_add_margin"/>

    </LinearLayout>



</RelativeLayout>